--- a/news.html
+++ b/news.html
@@ -1,140 +1,215 @@
 <!DOCTYPE html>
 <html lang="en">
-<style>
-    *{padding: 0; margin: 0; box-sizing: border-box;}
-    .news-home{
-      background-color: black;
-      height: 0vh;
-      background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.2)),
-                           url("madrid-cover2.jpg");
-    }
-    .news-home h1{
-      text-align: center;
-      color: white;
-      font-family: sans-serif;
-      position: relative;
-      top: 25%;
-    }
-    .container {
-  position: relative;
+  <head>
+    <meta charset="UTF-8" />
+    <title>Image Hover Effect</title>
+    
+    <style>
+      nav{
   width: 100%;
-  height: 60vh;
+  height: 80px;
+  color: rgb(4, 3, 3);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: black;
 }
-.column{
 
-  width:25%;
-  float: left;
+.logo{
+  font-size: 1.7em;
+  letter-spacing: 2px;
+  font-weight:bold;
+  position: relative;
+  right: 3.5%;
 }
-.image {
+
+.logo img {
+  transition: opacity 0.3s ease-in-out;
   opacity: 1;
-  display: block;
-  width: 50%;
-  height: auto;
-  transition: .5s ease;
-  backface-visibility: hidden;
 }
 
-.middle {
-  transition: .5s ease;
-  opacity: 0;
+.logo.scrolled img {
+  opacity: 0.7;
+}
+
+
+
+.menu a{
+  font-family: sans-serif;
+  text-decoration: none;
+  color: rgb(255, 253, 253);
+  padding: 10px 20px;
+  font-size: 14px;
+  position: relative;
+}
+
+.menu a:before{
+  content: '';
   position: absolute;
-  top: 10px;
-  bottom: 10px;
-  left: 10px;
-  right: 10px;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%)
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  border-bottom: 2px solid indianred;
+  transition: 0.2s linear;
 }
 
-.column:hover .image {
-  opacity: 0.3;
+.menu a:hover:before{
+  width: 90%;
 }
-
-.column:hover .middle {
-  opacity: 1;
-}
-
-.text {
+.register a{
+  position : relative;
+  left: 50%;
+  text-decoration: none;
   color: white;
-  font-size: 16px;
+  padding: 10px 20px;
+  font-family: sans-serif;
+  font-size: 17px;
+  background: indianred;
+  border-radius: 8px;
+  transition: 0.4s
 }
-</style>
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<div class="news-home">
-    <h1>News</h1>
-</div>
 
-<div class="container">
-    <div class="column">
-  <img src="mad-news2.jpg" alt="Avatar" class="image" style="width:100%; height:100%">
-  <div class="middle">
-    <div class="text">Read more</div>
-  </div></div>
-  <div class="column">
-      <img src="mad-news-2-0.jpg" alt="Avatar" class="image" style="width:100%; height:auto">
-  <div class="middle">
-    <div class="text">Read more</div>
-  </div></div>
-  <div class="column">
-      <img src="mad-new-1-2.jpg" alt="Avatar" class="image" style="width:100%; height:auto">
-  <div class="middle">
-    <div class="text">Read more</div>
-  </div></div>
-  <div class="column">
-      <img src="mad-news-3-1.jpg" alt="Avatar" class="image" style="width:100%; height:auto">
-  <div class="middle">
-    <div class="text">Read more</div>
-  </div></div>
-</div>
+.register a:hover{
+  background: transparent;
+  border: 1px solid indianred;
+}
+      /* Style for the image container */
+      .img-container {
+        position: relative;
+        display: block;
+        width: 25%;
+        max-width: auto;
+        float: left;
+        background-color: black;
+      }
 
-<div class="container">
-    <div class="column">
-  <img src="mad-new-4-1.jpg" alt="Avatar" class="image" style="width:100%; height:100%">
-  <div class="middle">
-    <div class="text">Read more</div>
-  </div></div>
-  <div class="column">
-      <img src="mad-news-5-3.jpg" alt="Avatar" class="image" style="width:100%; height:auto">
-  <div class="middle">
-    <div class="text">Read more</div>
-  </div></div>
-  <div class="column">
-      <img src="mad-news-4-0.jpg" alt="Avatar" class="image" style="width:100%; height:auto">
-  <div class="middle">
-    <div class="text">Read more</div>
-  </div></div>
-  <div class="column">
-      <img src="mad-news-6-0.jpg" alt="Avatar" class="image" style="width:100%; height:auto">
-  <div class="middle">
-    <div class="text">Read more</div>
-  </div></div>
+      /* Style for the image */
+      .img-container img {
+        display: block;
+        width: 100%;
+        height: auto;
+        opacity: 1;
+      }
 
+      /* Style for the text overlay */
+      .img-container .text-overlay {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        opacity: 0;
+        transition: opacity 0.3s ease-in-out;
+        text-align: center;
+        color: white;
+        font-size: 14px;
+        font-family: sans-serif;
+      }
 
-<div class="container">
-    <div class="column">
-  <img src="mad-news-mod.jpg" alt="Avatar" class="image" style="width:100%; height:100%">
-  <div class="middle">
-    <div class="text">Read more</div>
-  </div></div>
-  <div class="column">
-      <img src="mad-news-asen.jpg" alt="Avatar" class="image" style="width:100%; height:auto">
-  <div class="middle">
-    <div class="text">Read more</div>
-  </div></div>
-  <div class="column">
-      <img src="mad-news-mil.jpg" alt="Avatar" class="image" style="width:100%; height:auto">
-  <div class="middle">
-    <div class="text">Read more</div>
-  </div></div>
-  <div class="column">
-      <img src="mad-news-vin.jpg" alt="Avatar" class="image" style="width:100%; height:auto">
-  <div class="middle">
-    <div class="text">Read more</div>
-  </div></div>
-</div>
-</body>
+      /* Style for the hover effect */
+      .img-container:hover .img-overlay {
+        opacity: 0.6;
+        background-color: rgb(196, 42, 42)
+      }
+
+      .img-container:hover .text-overlay {
+        opacity: 1;
+      }
+    </style>
+    <link rel="stylesheet" type="text/css" href="news.css" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  </head>
+  <body>
+    <nav>
+      <div class="logo" id="logo">
+          <img src="images/NicePng_real-monkey-png_405962.png" alt="Logo" style="position: fixed; top: 8px; left: 3.5vh; width: 10vh; z-index: 999;">
+      </div>
+      <div class="menu">
+          <a href="project2.html">HOME</a>
+          <a href="news.html">NEWS</a>
+          <a href="#">FIXTURES</a>
+          <a href="#">STADIUM</a>
+          <a href="#">THE CLUB</a>
+      </div>
+      <div class="register">
+          <a href="#">Shop now</a>
+      </div>
+  </nav>
+    <div>
+      <div class="img-container">
+        <div class="img-overlay">
+          <img src="images/mad-news2.jpg" alt="Image 1" />
+        </div>
+        <div class="text-overlay">Image 1</div>
+      </div>
+      <div class="img-container">
+        <div class="img-overlay">
+          <img src="images/mad-news-2-0.jpg" alt="Image 2" />
+        </div>
+        <div class="text-overlay">Image 2</div>
+      </div>
+      <div class="img-container">
+        <div class="img-overlay">
+          <img src="images/mad-new-1-2.jpg" alt="Image 3" />
+        </div>
+        <div class="text-overlay">Image 3</div>
+      </div>
+      <div class="img-container">
+        <div class="img-overlay">
+          <img src="images/mad-news-3-1.jpg" alt="Image 4" />
+        </div>
+        <div class="text-overlay">Image 4</div>
+      </div>
+    </div>
+    <div>
+      <div class="img-container">
+        <div class="img-overlay">
+          <img src="images/mad-news-2-0.jpg" alt="Image 5" />
+        </div>
+        <div class="text-overlay">Image 5</div>
+      </div>
+      <div class="img-container">
+        <div class="img-overlay">
+          <img src="images/mad-news-5-3.jpg" alt="Image 6" />
+        </div>
+        <div class="text-overlay">Image 6</div>
+      </div>
+      <div class="img-container">
+        <div class="img-overlay">
+          <img src="images/mad-news-4-0.jpg" alt="Image 7" />
+        </div>
+        <div class="text-overlay">Image 7</div>
+      </div>
+      <div class="img-container">
+        <div class="img-overlay">
+          <img src="images/mad-new-4-1.jpg" alt="Image 7" />
+        </div>
+        <div class="text-overlay">Image 8</div>
+      </div>
+      <div class="img-container">
+        <div class="img-overlay">
+          <img src="images/mad-news-mod.jpg" alt="Image 7" />
+        </div>
+        <div class="text-overlay">Image 9</div>
+      </div>
+      <div class="img-container">
+        <div class="img-overlay">
+          <img src="images/mad-news-val.jpg" alt="Image 7" />
+        </div>
+        <div class="text-overlay">Image 10</div>
+      </div>
+      <div class="img-container">
+        <div class="img-overlay">
+          <img src="images/mad-news-asen.jpg" alt="Image 7" />
+        </div>
+        <div class="text-overlay">Image 11</div>
+      </div>
+      <div class="img-container">
+        <div class="img-overlay">
+          <img src="images/mad-news-mil.jpg" alt="Image 7" />
+        </div>
+        <div class="text-overlay">Image 12</div>
+      </div>
+    </div>
+  </body>
 </html>
