created club page

--- a/news.html
+++ b/news.html
@@ -102,7 +102,8 @@
         transition: opacity 0.3s ease-in-out;
         text-align: center;
         color: white;
-        font-size: 14px;
+        font-size: 20px;
+        font-weight: 800;
         font-family: sans-serif;
       }
 
@@ -140,25 +141,25 @@
         <div class="img-overlay">
           <img src="images/mad-news2.jpg" alt="Image 1" />
         </div>
-        <div class="text-overlay">Image 1</div>
+        <div class="text-overlay">Madrid : 1 <br>Liverpool : 0</div>
       </div>
       <div class="img-container">
         <div class="img-overlay">
           <img src="images/mad-news-2-0.jpg" alt="Image 2" />
         </div>
-        <div class="text-overlay">Image 2</div>
+        <div class="text-overlay">Madrid : 2 <br>Chelsea : 0</div>
       </div>
       <div class="img-container">
         <div class="img-overlay">
           <img src="images/mad-new-1-2.jpg" alt="Image 3" />
         </div>
-        <div class="text-overlay">Image 3</div>
+        <div class="text-overlay">Madrid : 1 <br>Sherrif : 2</div>
       </div>
       <div class="img-container">
         <div class="img-overlay">
           <img src="images/mad-news-3-1.jpg" alt="Image 4" />
         </div>
-        <div class="text-overlay">Image 4</div>
+        <div class="text-overlay">Madrid : 3 <br>Ossasuna : 1</div>
       </div>
     </div>
     <div>
@@ -166,49 +167,49 @@
         <div class="img-overlay">
           <img src="images/mad-news-2-0.jpg" alt="Image 5" />
         </div>
-        <div class="text-overlay">Image 5</div>
+        <div class="text-overlay">Madrid : 2 <br>Chelsea : 0</div>
       </div>
       <div class="img-container">
         <div class="img-overlay">
           <img src="images/mad-news-5-3.jpg" alt="Image 6" />
         </div>
-        <div class="text-overlay">Image 6</div>
+        <div class="text-overlay">Madrid : 5 <br>Mountains : 3</div>
       </div>
       <div class="img-container">
         <div class="img-overlay">
           <img src="images/mad-news-4-0.jpg" alt="Image 7" />
         </div>
-        <div class="text-overlay">Image 7</div>
+        <div class="text-overlay">Madrid : 4 <br>Barcelona : 0</div>
       </div>
       <div class="img-container">
         <div class="img-overlay">
           <img src="images/mad-new-4-1.jpg" alt="Image 7" />
         </div>
-        <div class="text-overlay">Image 8</div>
+        <div class="text-overlay">Madrid : 4 <br>De grana : 0</div>
       </div>
       <div class="img-container">
         <div class="img-overlay">
           <img src="images/mad-news-mod.jpg" alt="Image 7" />
         </div>
-        <div class="text-overlay">Image 9</div>
+        <div class="text-overlay">Madrid : 1 <br>Bayern : 0</div>
       </div>
       <div class="img-container">
         <div class="img-overlay">
           <img src="images/mad-news-val.jpg" alt="Image 7" />
         </div>
-        <div class="text-overlay">Image 10</div>
+        <div class="text-overlay">Madrid : 2 <br>Arsenal : 1</div>
       </div>
       <div class="img-container">
         <div class="img-overlay">
           <img src="images/mad-news-asen.jpg" alt="Image 7" />
         </div>
-        <div class="text-overlay">Image 11</div>
+        <div class="text-overlay">Madrid : 2 <br>Atletico Madrid : 0</div>
       </div>
       <div class="img-container">
         <div class="img-overlay">
           <img src="images/mad-news-mil.jpg" alt="Image 7" />
         </div>
-        <div class="text-overlay">Image 12</div>
+        <div class="text-overlay">Madrid : 7 <br> PSG : 0</div>
       </div>
     </div>
   </body>
