--- a/project2.html
+++ b/project2.html
@@ -65,7 +65,7 @@
       style="width: 100%; height: auto; display: block"
     />
     <div class="club-text">
-      <div class="the-club">The Club</div>
+      <div class="the-club">THE CLUB</div>
     </div>
   </div>
 </div>
