--- a/news.html
+++ b/news.html
@@ -130,7 +130,7 @@
           <a href="news.html">NEWS</a>
           <a href="#">FIXTURES</a>
           <a href="#">STADIUM</a>
-          <a href="#">THE CLUB</a>
+          <a href="the-club.html">THE CLUB</a>
       </div>
       <div class="register">
           <a href="#">Shop now</a>
