--- a/project2.html
+++ b/project2.html
@@ -9,14 +9,14 @@
 <header class="header1">
     <nav>
         <div class="logo">
-            <img src="images/NicePng_real-monkey-png_405962.png" alt="Logo" style="position: fixed; top: 8px; left: 3.5vh; width: 10vh;">
+            <img src="images/NicePng_real-monkey-png_405962.png" alt="Logo" style="position: fixed; top: 8px; left: 3.5vh; width: 5vh;">
         </div>
         <div class="menu">
             <a href="#">HOME</a>
             <a href="news.html">NEWS</a>
             <a href="#">FIXTURES</a>
             <a href="#">STADIUM</a>
-            <a href="#">THE CLUB</a>
+            <a href="the-club.html">THE CLUB</a>
         </div>
         <div class="register">
             <a href="#">Shop now</a>
