--- a/news.html
+++ b/news.html
@@ -2,10 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Image Hover Effect</title>
-    
-    <style>
-      nav{
+    <title>News</title>    
+<style>
+nav{
   width: 100%;
   height: 80px;
   color: rgb(4, 3, 3);
@@ -14,7 +13,6 @@
   align-items: center;
   background-color: black;
 }
-
 .logo{
   font-size: 1.7em;
   letter-spacing: 2px;
@@ -22,27 +20,22 @@
   position: relative;
   right: 3.5%;
 }
-
 .logo img {
   transition: opacity 0.3s ease-in-out;
   opacity: 1;
 }
-
 .logo.scrolled img {
   opacity: 0.7;
 }
-
-
-
 .menu a{
   font-family: sans-serif;
   text-decoration: none;
   color: rgb(255, 253, 253);
   padding: 10px 20px;
-  font-size: 14px;
+  font-size: 15px;
+  font-weight: 600;
   position: relative;
 }
-
 .menu a:before{
   content: '';
   position: absolute;
@@ -53,84 +46,73 @@
   border-bottom: 2px solid indianred;
   transition: 0.2s linear;
 }
-
 .menu a:hover:before{
   width: 90%;
 }
 .register a{
   position : relative;
-  left: 50%;
+  left: 105%;
   text-decoration: none;
   color: white;
   padding: 10px 20px;
   font-family: sans-serif;
-  font-size: 17px;
+  font-size: 15px;
   background: indianred;
   border-radius: 8px;
   transition: 0.4s
 }
-
 .register a:hover{
   background: transparent;
   border: 1px solid indianred;
 }
-      /* Style for the image container */
-      .img-container {
-        position: relative;
-        display: block;
-        width: 25%;
-        max-width: auto;
-        float: left;
-        background-color: black;
-      }
+.img-container {
+  position: relative;
+  display: block;
+  width: 25%;
+  max-width: auto;
+  float: left;
+  background-color: black;
+}
+.img-container img {
+  display: block;
+  width: 100%;
+  height: auto;
+  opacity: 1;
+}
 
-      /* Style for the image */
-      .img-container img {
-        display: block;
-        width: 100%;
-        height: auto;
-        opacity: 1;
-      }
-
-      /* Style for the text overlay */
-      .img-container .text-overlay {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        opacity: 0;
-        transition: opacity 0.3s ease-in-out;
-        text-align: center;
-        color: white;
-        font-size: 20px;
-        font-weight: 800;
-        font-family: sans-serif;
-      }
-
-      /* Style for the hover effect */
-      .img-container:hover .img-overlay {
-        opacity: 0.6;
-        background-color: rgb(196, 42, 42)
-      }
-
-      .img-container:hover .text-overlay {
-        opacity: 1;
-      }
-    </style>
+.img-container .text-overlay {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  text-align: center;
+  color: white;
+  font-size: 20px;
+  font-weight: 800;
+  font-family: sans-serif;
+}
+.img-container:hover .img-overlay {
+  opacity: 0.6;
+  background-color: rgb(196, 42, 42)
+}
+.img-container:hover .text-overlay {
+  opacity: 1;
+}
+</style>
     <link rel="stylesheet" type="text/css" href="news.css" />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
     <nav>
       <div class="logo" id="logo">
-          <img src="images/NicePng_real-monkey-png_405962.png" alt="Logo" style="position: fixed; top: 8px; left: 3.5vh; width: 10vh; z-index: 999;">
+          <img src="images/NicePng_real-monkey-png_405962.png" alt="Logo" style="position: fixed; top: 15px; left: 3.5vh; width: 7vh;; z-index: 999;">
       </div>
       <div class="menu">
-          <a href="project2.html">HOME</a>
-          <a href="news.html">NEWS</a>
-          <a href="#">FIXTURES</a>
-          <a href="#">STADIUM</a>
-          <a href="the-club.html">THE CLUB</a>
+          <a href="home.html">Home</a>
+          <a href="news.html">News</a>
+          <a href="fixtures.html">Fixtures</a>
+          <a href="the-club.html">The Club</a>
       </div>
       <div class="register">
           <a href="#">Shop now</a>
