--- a/the-club.html
+++ b/the-club.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Slider Background</title>
+  <title>The Club</title>
   <style>
-    nav{
+
+body {
+  background-color: black;
+}
+nav{
 z-index: 999;
   width: 100%;
   height: 80px;
@@ -24,14 +28,17 @@ z-index: 999;
 }
 
 .menu a{
+  font-family: sans-serif;
+  font-weight: 700;
   text-decoration: none;
   color: white;
   padding: 10px 20px;
-  font-size: 14px;
+  font-size: 15px;
   position: relative;
 }
 
 .menu a:before{
+  font-family: sans-serif;
   content: '';
   position: absolute;
   top: 0;
@@ -47,11 +54,12 @@ z-index: 999;
 }
 .register a{
   position : relative;
-  left: 50%;
+  left: 105%;
   text-decoration: none;
   color: white;
   padding: 10px 20px;
-  font-size: 17px;
+  font-size: 15px;
+  font-family: sans-serif;
   background: indianred;
   border-radius: 8px;
   transition: 0.4s
@@ -61,74 +69,122 @@ z-index: 999;
   background: transparent;
   border: 1px solid indianred;
 }
-    body {
-      margin: 0;
-      padding: 0;
-      background-color: black;
-      background-image: url("images/club-stadium-1.jpg");
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      overflow: hidden;
-    }
-    #slider {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
-      overflow: hidden;
-    }
-    #slider img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      opacity: 0;
-      transition: opacity 1s ease-in-out;
-    }
-    #slider img.active {
-      opacity: 1;
-    }
+
+.club-page{
+  width: 100%;
+  height: auto;
+}
+.club-page p{
+  color: white;
+  text-align: center;
+  font-size: 2.25rem;
+  font-family: sans-serif;
+  font-weight: 600;
+}
+.container-club-page{
+  padding: 0rem;
+}
+.slider-wrapper{
+  position: relative;
+  width: 77%;
+  margin: 0 auto;
+}
+.slider{
+
+  height: 100vh;
+  display: flex;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
+  border-radius: 0.5rem;
+}
+.slider img{
+  flex: 1 0 100%;
+  scroll-snap-align: start;
+  object-fit: cover;
+}
+.slider-nav{
+  display: flex;
+  column-gap: 1rem;
+  position: absolute;
+  bottom: 1.25rem;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+}
+.slider-nav a{
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 50%;
+  background-color: #fff;
+  opacity: 0.75;
+  transition: opacity ease 250ms;
+}
+.slider-nav a:hover{
+  opacity: 1;
+}
+
+.block2{
+  background-color: black;
+  width: 100%;
+  height: 100vh;
+}
   </style>
 </head>
 <nav>
     <div class="logo">
-        <img src="images/NicePng_real-monkey-png_405962.png" alt="Logo" style="position: fixed; top: 8px; left: 3.5vh; width: 10vh;">
+        <img src="images/NicePng_real-monkey-png_405962.png" alt="Logo" style="position: fixed; top: 20px; left: 3.5vh; width: 7vh;">
     </div>
     <div class="menu">
-        <a href="#">HOME</a>
-        <a href="news.html">NEWS</a>
-        <a href="#">FIXTURES</a>
-        <a href="#">STADIUM</a>
-        <a href="the-club.html">THE CLUB</a>
+        <a href="home.html">Home</a>
+        <a href="news.html">News</a>
+        <a href="fixtures.html">Fixtures</a>
+        <a href="the-club.html">The Club</a>
     </div>
     <div class="register">
         <a href="#">Shop now</a>
     </div>
 </nav>
 <body>
-    
-    <div style="color:#fff" class="stad-text">stadiums</div>
-
-  <div id="slider">
-    <img src="images/club-stadium-1.jpg" alt="Stadium 1" class="active">
-    <img src="images/club-stadium-2.jpg" alt="Stadium 2">
-    <img src="images/club-stadium-3.jpg" alt="Stadium 3">
-    <img src="images/club-stadium-4.jpg" alt="Stadium 4">
+  <div class="club-page">
+    <p><br>Stadium</p>
+    <div class="container-club-page">
+      <div class="slider-wrapper">
+        <div class="slider">
+          <img id="slide1" src="images/club-stadium-1.jpg" alt="none">
+          <img id="slide2" src="images/club-stadium-3.jpg" alt="none">
+          <img id="slide3" src="images/club-stadium-4.jpeg" alt="none">
+          <img id="slide4" src="images/club-stadium-2.jpg" alt="none">
+        </div>
+        <div class="slider-nav">
+          <a href="#slide1"></a>
+          <a href="#slide2"></a>
+          <a href="#slide3"></a>
+          <a href="#slide4"></a>
+        </div>
+      </div>
+    </div>    
   </div>
-  <script>
-    let slideIndex = 0;
-    const slides = document.querySelectorAll("#slider img");
+  <div class="club-page">
+    <p><br><br>Squad</p>
+    <div class="container-club-page">
+      <div class="slider-wrapper">
+        <div class="slider">
+          <img id="slide1" src="images/squad1.jpg" alt="none">
+          <img id="slide2" src="images/squad2.jpg" alt="none">
+          <img id="slide3" src="images/squad3.jpg" alt="none">
+          <img id="slide4" src="images/squad4.jpg" alt="none">
+        </div>
+        <div class="slider-nav">
+          <a href="#slide1"></a>
+          <a href="#slide2"></a>
+          <a href="#slide3"></a>
+          <a href="#slide4"></a>
+        </div>
+      </div>
+    </div>    
+  </div>
 
-    setInterval(() => {
-      slides[slideIndex].classList.remove("active");
-      slideIndex = (slideIndex + 1) % slides.length;
-      slides[slideIndex].classList.add("active");
-    }, 5000);
-  </script>
 </body>
 </html>
