--- a/the-club.html
+++ b/the-club.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>The Club</title>
   <style>
-
+*{padding: 0; margin: 0; box-sizing: border-box;}
 body {
   background-color: black;
 }
