--- a/fixtures.html
+++ b/fixtures.html
@@ -96,7 +96,7 @@
             <a href="the-club.html">The Club</a>
         </div>
         <div class="register">
-            <a href="#">Shop now</a>
+            <a onclick="checker()" href="https://shop.realmadrid.com/">Shop now</a>
         </div>
     </nav>
     <div class="page3">
@@ -134,4 +134,13 @@
             </div>
         </div>
     </div>
+    <script>
+      function checker() {
+          var result = confirm('Are you sure?');
+          if (result == false) {
+              event.preventDefault()
+          }
+      }
+  </script>
 </body>
+</html>
