--- a/home.html
+++ b/home.html
@@ -9,26 +9,29 @@
 <header class="header1">
     <nav>
         <div class="logo">
-            <img src="images/NicePng_real-monkey-png_405962.png" alt="Logo" style="position: fixed; top: 18px; left: 3.5vh; width: 7vh;">
+            <img src="images/NicePng_real-monkey-png_405962.png" alt="Logo" style="position: fixed; top: 18px;
+             left: 3.5vh; width: 7vh;">
         </div>
         <div class="menu">
-            <a href="home.html">Home</a>
-            <a href="news.html">News</a>
-            <a href="fixtures.html">Fixtures</a>
+            <a onclick="checker()" href="home.html">Home</a>
+            <a onclick="checker()" href="news.html">News</a>
+            <a onclick="checker()" href="fixtures.html">Fixtures</a>
             <a onclick="checker()" href="the-club.html">The Club</a>
         </div>
         <div class="register">
-            <a onclick="alert('Are you sure?')" href="https://shop.realmadrid.com/">Shop now</a>
+            <a onclick="checker()" href="https://shop.realmadrid.com/">Shop now</a>
         </div>
     </nav>
     <section class="h-txt">
         <h1>Welcome Madridistas!</h1>
         <br>
-        <a href="#">Get your tickets</a>
+        <a href="https://www.realmadrid.com/en/tickets">Get your tickets</a>
     </section>
 </header>
 <div class="page2">
-    <div class="header2"></div>
+    <div class="header2">
+        <img style="width: 100%;height: 100vh;" src="images/mad-news-2-0.jpg" alt="">
+    </div>
     <div class="header3">
     <div class="h-txt2">
         <br><br><br><br><br><br><br><br>
@@ -99,7 +102,7 @@
     </div>
   </div>
 </div>
-<div class="footer"></div>
+
 
 <script>
     function checker() {
